After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694995 - too much spacing in clue bar
too much spacing in clue bar
Status: RESOLVED FIXED
Product: gnome-user-share
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-user-share maintainers
gnome-user-share maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-02 13:28 UTC by William Jon McCann
Modified: 2013-11-12 13:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (49.36 KB, image/png)
2013-03-02 13:28 UTC, William Jon McCann
  Details
Remove some space between lines in the cluebar (975 bytes, patch)
2013-03-02 13:37 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2013-03-02 13:28:54 UTC
Created attachment 237792 [details]
screenshot

The spacing between lines in the cluebar is too much.
Comment 1 William Jon McCann 2013-03-02 13:37:41 UTC
Created attachment 237793 [details] [review]
Remove some space between lines in the cluebar
Comment 2 William Jon McCann 2013-03-02 13:38:12 UTC
Helps a little bit. Could probably use a bit more compression as well.
Comment 3 Bastien Nocera 2013-03-04 14:13:26 UTC
Review of attachment 237793 [details] [review]:

++
Comment 4 Bastien Nocera 2013-03-04 14:14:38 UTC
And I just noticed that the UI says "Personal File Sharing" which isn't what the feature is called anymore, so we should probably change that string before release.