share-bar: Remove some space between lines

https://bugzilla.gnome.org/show_bug.cgi?id=694995